--- a/web.config
+++ b/web.config
@@ -6,37 +6,47 @@
     </handlers>
     <rewrite>
       <rules>
-        <!-- Don't interfere with requests for node-inspector debugging -->
+        <!-- Rule 1: Exclude Node Inspector -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^backend/server.js\/debug[\/]?" />
         </rule>
 
-        <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}" />
-        </rule>
-
-        <!-- All other URLs for API routes are mapped to the Node.js app -->
-        <rule name="DynamicContent-API">
-          <conditions>
-            <add input="{REQUEST_URI}" pattern="^/api" />
+        <!-- Rule 2: Serve existing static files (JS, CSS, Images, Fonts etc.) directly -->
+        <!-- This rule stops processing if a file exists -->
+        <rule name="StaticFiles" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <!-- Check if the request is for an actual file -->
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" />
+            <!-- Exclude the backend server file itself -->
+            <add input="{REQUEST_URI}" pattern="^/backend/server.js" negate="true" />
           </conditions>
-          <action type="Rewrite" url="backend/server.js" />
-        </rule>
-
-        <!-- Serve static files directly -->
-        <rule name="StaticFiles">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="False" />
-          </conditions>
+          <!-- Do nothing, let IIS serve the static file -->
           <action type="None" />
         </rule>
 
-        <!-- For other requests, try matching a file first -->
+        <!-- Rule 3: Route API requests to the Node.js backend -->
+        <rule name="DynamicContent-API" stopProcessing="true">
+          <match url="^api(/.*)?$" />
+          <!-- Rewrite to the Node.js entry point -->
+          <action type="Rewrite" url="backend/server.js" />
+        </rule>
+
+        <!-- Rule 4: Fallback for Client-Side Routing (SPA) -->
+        <!-- Handles requests that are not for existing files and not API calls -->
         <rule name="ClientFallback">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <!-- Ensure it's not a file -->
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <!-- Ensure it's not a directory -->
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <!-- Ensure it's not an API call -->
+            <add input="{REQUEST_URI}" pattern="^/api/" negate="true" />
+             <!-- Exclude the backend server file itself -->
+            <add input="{REQUEST_URI}" pattern="^/backend/server.js" negate="true" />
           </conditions>
+          <!-- Rewrite to the main HTML file for the frontend app to handle routing -->
           <action type="Rewrite" url="index.html" />
         </rule>
       </rules>
@@ -44,7 +54,7 @@
 
     <!-- Ensure the Node.js app has enough memory and doesn't time out too quickly -->
     <iisnode 
-             watchedFiles="web.config;*.js"
+             watchedFiles="web.config;*.js;backend/**/*.js"
              loggingEnabled="true"
              logDirectory="iisnode"
              debuggingEnabled="false"
